viewsource.css: Make bg white, fix bg not covering whole page

--- a/src/static/viewsource.css
+++ b/src/static/viewsource.css
@@ -1,9 +1,11 @@
 
 #TridactylViewsourceElement {
   position: absolute !important;
+  /* This is the z-index of hint.css and content.css -1 */
+  z-index: 2147483646 !important;
   top: 0px !important;
   font-family: monospace !important;
-  background-color: #F0F0F2 !important;
+  background: white !important;
   white-space: pre !important;
-  width: 100% !important;
+  min-width: 100% !important;
 }
